--- a/VivadoProject/Final.sim/sim_1/behav/xsim/xsim.dir/TOP_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/VivadoProject/Final.sim/sim_1/behav/xsim/xsim.dir/TOP_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Jan  8 03:03:39 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Jan  9 09:37:00 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>09f64a36ac3246faa21930fa42ca7f3c</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>31</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>f8f40bb7-852f-458b-9b54-f9a62620ff99</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>f8f40bb7-852f-458b-9b54-f9a62620ff99</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-6700HQ CPU @ 2.60GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3304.828 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3134.930 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 16.04.6 LTS</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
@@ -35,17 +35,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
+<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
+    <TD>debug=typical</TD>
+    <TD>dpi_used=false</TD>
+    <TD>file_counter=21</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
+    <TD>hwcosim=false</TD>
+    <TD>sdfmodeling=false</TD>
+    <TD>vhdl2008=false</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=2</TD>
-    <TD>runtime=50 us</TD>
-    <TD>simulation_memory=127432_KB</TD>
-    <TD>simulation_time=0.42_sec</TD>
-</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+<TR ALIGN='LEFT'>    <TD>compiler_memory=630344_KB</TD>
+    <TD>compiler_time=9.63_sec</TD>
+    <TD>simulation_image_code=2437 KB</TD>
+    <TD>simulation_image_data=208 KB</TD>
+</TR><TR ALIGN='LEFT'>    <TD>total_instances=612</TD>
+    <TD>total_nets=0</TD>
+    <TD>total_processes=3069</TD>
+    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
